Fix safari alignment

--- a/client/components/share/main.scss
+++ b/client/components/share/main.scss
@@ -16,6 +16,7 @@
 		display: inline-block;
 		overflow: hidden;
 		padding: 9px 0;
+		vertical-align: top;
 	}
 
 	&__comments {
